@@ -22,14 +22,18 @@ module NewRelic
     def profiling?
       @profiling
     end
-    
+
+    def profiling_available?
+      @profiling_available ||= 
+      begin
+        require 'ruby-prof'
+        true
+      rescue LoadError; end
+    end
     # Set the flag for capturing profiles in dev mode.  If RubyProf is not
     # loaded a true value is ignored.
     def profiling=(val)
-      begin
-        require 'ruby-prof' if val
-      rescue LoadError; end
-      @profiling = (val && defined?(RubyProf))
+      @profiling = profiling_available? && val && defined?(RubyProf)
     end
     
     attr_accessor :log_file
